# clite

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Python.gitignore  README.md  Taskfile.yml  get_started.py  index.html  isort.cfg  mise.local.toml  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  package.json  pyproject.toml  ruff.toml  sitemap.xml
.gigaide/: gigaide.properties
.github/workflows/: format-lint.yml  publish_coverage.yml  test.yml
CONTRIBUTING/: index.html
clite/: __init__.py  _types.py  _typing.py  cliparser.py  clityping.py  converter.py  errors.py  helper.py  main.py  mapping.py  output.py  params_types.py  parser.py  rich_utils.py  testing.py  types.py  typing.py  utils.py
clite/parser/: arguments.py  commands.py  function.py
docs/: CONTRIBUTING.md  get-started.md  index.md  references.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/stylesheets/: extra.css
examples/: 001_started_app.py  002_cli_options.py
overrides/partials/: copyright.html
playground/: func.py  main.py  opts.py  pyproject.toml
references/: index.html
roadmap/: index.html
search/: search_index.json
tests/: conftest.py  test_clite.py
tests/test_parser/: test_args.py  test_flags.py  test_options.py
tests/test_types/: test_type_args.py  test_type_options.py
