[tool.poetry]
name = "clite"
version = "0.1.0"
description = ""
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.369"
black = "^24.4.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
