[project]
name = "clite"
version = "0.1.0"
description = "Small package for creating command line interfaces"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  "black>=24.10.0",
  "isort>=5.13.2",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "ruff>=0.9.0",
]


[tool.isort]
profile = "black"
multi_line_output = 3
